--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "Project1",
   "version": "0.0.1",
   "private": "true",
+  "scripts": {
+    "start": "node ./bin/www"
+  },
   "dependencies": {
     "express": "^3.0.0-alpha4",
     "jade": "^1.0.4",
